--- a/foundations/intro-to-css/02-class-id-selectors/index.html
+++ b/foundations/intro-to-css/02-class-id-selectors/index.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <p class="odd-number">Number 1 - I'm a class!</p>
+    <p class="odd-numbers">Number 1 - I'm a class!</p>
     <div class="blue-thirty-six">Number 2 - I'm one ID.</div>
-    <p class="odd-number three-four">Number 3 - I'm a class, but cooler!</p>
+    <p class="odd-numbers three-four">Number 3 - I'm a class, but cooler!</p>
     <div class="three-four bold four-green">Number 4 - I'm another ID.</div>
-    <p class="odd-number">Number 5 - I'm a class!</p>
+    <p class="odd-numbers">Number 5 - I'm a class!</p>
   </body>
 </html>
